--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -2,7 +2,7 @@
 
     <div id="cluster_map"></div>
 
-    <h1>All campgrounds</h1>
+    <h1 class="text-muted my-3">All campgrounds</h1>
     
     <% for(let campground of campgrounds){%>
         <div class="card mb-3">
