--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="/stylesheets/stars.css">
 </head>
     <div class="row mb-3">
-        <div class="col-6">
+        <div class="col-md-6">
          
 
           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
@@ -47,7 +47,7 @@
                 <div class="card-footer text-muted"> 2 days ago</div>
             </div>
           </div>
-          <div class="col-6">
+          <div class="col-md-6 mb-3">
             <div id='map' style='width: 400px; height: 300px;'></div>
             <% if(currentUser){%>
             <h2>Leave a Review</h2>
