--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -44,11 +44,12 @@
                     </form>
                 </div>
                 <%}%>
-                <div class="card-footer text-muted"> 2 days ago</div>
             </div>
           </div>
-          <div class="col-md-6 mb-3">
-            <div id='map' style='width: 400px; height: 300px;'></div>
+          <div class="col-md-6 my-3">
+            <div class="mb-3">
+            <div id='map'></div>
+          </div>
             <% if(currentUser){%>
             <h2>Leave a Review</h2>
             <form action="/campgrounds/<%=campground._id%>/reviews" method="POST" class="mb-3 validated-form" novalidate >
