--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -26,7 +26,7 @@
         </div>
     <%}%>
     <script>
-        const mapToken = '<%-process.env.MAPBOX_TOKEN%>'; 
-        const campgrounds = {features:<%-JSON.stringify(campgrounds)%>}  
+        var mapToken = '<%-process.env.MAPBOX_TOKEN%>'; 
+        var campgrounds = {features:<%-JSON.stringify(campgrounds)%>}  
         </script>
 <script src="/javascript/clusterMap.js"></script>
