--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -46,7 +46,7 @@
                 <%}%>
             </div>
           </div>
-          <div class="col-md-6 my-3">
+          <div class="col-md-6 mb-3">
             <div class="mb-3">
             <div id='map'></div>
           </div>
@@ -105,7 +105,7 @@
       </div>
     </div>
 <script>
-  const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
-  const campground = <%-JSON.stringify(campground)%>
+  var mapToken = '<%-process.env.MAPBOX_TOKEN%>';
+  var campground = <%-JSON.stringify(campground)%>
   </script>
 <script src="/javascript/showPageMap.js"></script>
