some display fix

--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -75,7 +75,7 @@
             </div>
             
         </form>
-        <a href="/campgrounds">Back to All campgrounds</a>
+        <a href="/campgrounds" class="btn btn-success">Back to All campgrounds</a>
     </div>
 </div>
 
