--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -26,7 +26,7 @@
             <%}%>
           </div>
 
-            <div class="card">
+            <div class="card mb-3">
                 <div class="card-body">
                   <h5 class="card-title"><%=campground.title%></h5>
                   <p class="card-text"><%=campground.description%></p>
