--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -2,6 +2,16 @@
 <html>
 <head>
 <title>YelpCamp</title>
+<script>
+    var device = ['iPhone','iPad']
+    var isIos = false
+    for(var i = 0 ; i < device.length;i++){
+        if(navigator.userAgent.match(device[i])){
+            isIos = true
+        }
+    }
+    console.log(isIos)
+</script>
 <meta charset="UTF-8">
 <meta name="viewport" content="width = device-width, initial-scale=1">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css" integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
