--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -34,7 +34,7 @@
 <script src="/javascript/clusterMap.js"></script>
 <script>
     let mapDisplay = document.querySelector('.mapDisplay')
-    if(isIos===true){
+    if(isIos){
         mapDisplay.style.display = 'none'
     }
 </script>
