--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -112,7 +112,7 @@
 <script src="/javascript/showPageMap.js"></script>
 <script>
   let mapDisplay = document.querySelector('.mapDisplay')
-  if(isIos===true){
+  if(isIos){
       mapDisplay.style.display = 'none'
   }
 </script>
