--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -11,4 +11,5 @@ nav{
     -moz-transform:translateZ(1px);
     -o-transform:translateZ(1px);
     transform:translateZ(1px);
+    overflow: visible;
 }
