container fluid fix

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -13,3 +13,7 @@ nav{
     transform:translateZ(1px);
     overflow: visible;
 }
+.container-fluid{
+    transform:translateZ(1px);
+    overflow: visible;
+}
