--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,29 +1,27 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand ml-2" href="#">YelpCamp</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="container-fluid">
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="/">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/campgrounds">Campgrounds</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/campgrounds/new">New Campground</a>
-        </li>
-    </div>
-        <div class="navbar-nav">
-            <% if(!currentUser) {%>
-            <a class="nav-link" href="/login">Login</a>
-            <a class="nav-link" href="/register">Register</a>
-            <% } else {%>
-            <a class="nav-link" href="/logout">Logout</a>
-            <% } %>
-        </div>
-      </ul>
-    </div>
-  </nav>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+  <a class="navbar-brand ml-2" href="#">YelpCamp</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="/">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/campgrounds">Campgrounds</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/campgrounds/new">New Campground</a>
+      </li>
+    </ul>
+    <div class="navbar-nav ml-auto">
+      <% if(!currentUser) {%>
+      <a class="nav-link" href="/login">Login</a>
+      <a class="nav-link" href="/register">Register</a>
+      <% } else {%>
+      <a class="nav-link" href="/logout">Logout</a>
+      <% } %>
+  </div>
+  </div>
+</nav>
