--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/stylesheets/home.css">
 </head>
 
-<body class="d-flex text-center text-white bg-dark">
+<body class="d-flex text-center text-white bg-dark mt-2">
     <div class="cover-container d-flex w-100 p-3 mx-auto flex-column">
         <header class="mb-auto">
             <div>
