--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -11,7 +11,7 @@
 </head>
 <body class="d-flex flex-column vh-100">
     <%- include('../partials/navbar')%>
-    <main class="container mt-5">
+    <main class="container">
         <%- include('../partials/flash.ejs') %>
         <%- body %>
     </main>
